# airis-mcp-gateway

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  README.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.yml  install.sh  manifest.toml  mcp-config.json.example  routing-table.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
apps/airis-commands/: package-lock.json  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/src/app/: main.py
apps/api/src/app/api/endpoints/: gateway.py  mcp_proxy.py  validate_server.py
apps/api/src/app/core/: behavior_compiler.py  config.py  credentials_provider.py  dynamic_mcp.py  encryption.py  mcp_config_loader.py  process_manager.py  process_runner.py  routing_engine.py  workflow_loader.py
apps/api/src/app/middleware/: auth.py  rate_limit.py
apps/api/tests/e2e/: test_mcp_servers_e2e.py
apps/api/tests/unit/: test_behavior_compiler.py  test_dynamic_mcp.py  test_mcp_config_loader.py  test_process_runner_ttl.py  test_public_routes.py  test_retry_logic.py  test_routing_engine.py  test_stream_bridge.py  test_workflow_loader.py
apps/gateway-control/: package-lock.json  package.json  (+1 more)
assets/: demo-live.sh  demo-script.sh  demo.tape  record-demo.sh
config/: mcp-config.template.json
docs/: dynamic-mcp.md  troubleshooting.md
scripts/: airis-gateway  airis-mcp-gateway  quick-install.sh
skills/: .mcp.json  package.json  settings.json
workflows/: README.md  data-query.yaml  implement-feature.yaml  proactive-usage.yaml  tool-routing.yaml  web-research.yaml
(+17 files in other folders)
